img tags added to HTML

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
           <!-- nav -->
           <nav>
-            <a>Menu</a>
-            <a>Special</a>
-            <a>Offers</a>
-            <a>Contact</a>
+            <a href="menu.html">Menu</a>
+            <a href="special.html">Special</a>
+            <a href="offers.html">Offers</a>
+            <a href="contact.html">Contact</a>
           </nav>
         </div>
       </header>
@@ -40,9 +40,15 @@
         <div>
           <h2>OUR FOOD</h2>
 
-          img/food-avocadotoast.jpg img/food-burger.jpg img/food-poutine.jpg
-          img/food-ribs.jpg img/food-sandwich.jpg img/food-sausage.jpg
-          img/food-steak.jpg img/food-tacos.jpg img/food-wings.jpg
+          <img src="img/food-avocadotoast.jpg" />
+          <img src="img/food-burger.jpg" />
+          <img src="img/food-poutine.jpg" />
+          <img src="img/food-ribs.jpg" />
+          <img src="img/food-sandwich.jpg" />
+          <img src="img/food-sausage.jpg" />
+          <img src="img/food-steak.jpg" />
+          <img src="img/food-tacos.jpg" />
+          <img src="img/food-wings.jpg" />
         </div>
       </section>
 
