anchor tags added to nav

--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
 
           <!-- nav -->
           <nav>
-            <a href="menu.html">Menu</a>
-            <a href="special.html">Special</a>
-            <a href="offers.html">Offers</a>
-            <a href="contact.html">Contact</a>
+            <div>
+              <a href="menu.html">Menu</a>
+              <a href="#reservations">Reservations</a>
+              <a href="#offers">Special Offers</a>
+              <a href="#contact">Contact</a>
+            </div>
+
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
           </nav>
         </div>
       </header>
@@ -132,7 +138,14 @@
         <!-- email signup -->
         Join our mailing list! Sign Up
         <!-- nav -->
-        Menu Reservations Special Offers Contact
+        <nav>
+          <input type="email" placeholder="Email Address" />
+          <button class="email-btn" type="button">Sign Up</button>
+          <!-- <a href="menu.html">Menu</a>
+          <a href="">Special</a>
+          <a href="">Offers</a>
+          <a href="">Contact</a> -->
+        </nav>
         <!-- copyright -->
         ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
       </footer>
