input tag and button added to footer

--- a/index.html
+++ b/index.html
@@ -141,10 +141,12 @@
         <nav>
           <input type="email" placeholder="Email Address" />
           <button class="email-btn" type="button">Sign Up</button>
-          <!-- <a href="menu.html">Menu</a>
-          <a href="">Special</a>
-          <a href="">Offers</a>
-          <a href="">Contact</a> -->
+          <div>
+            <a href="menu.html">Menu</a>
+            <a href="#reservations">Reservations</a>
+            <a href="#offers">Special Offers</a>
+            <a href="#contact">Contact</a>
+          </div>
         </nav>
         <!-- copyright -->
         ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
