HTML tags added to menu page

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <!-- footer -->
       <footer>
         <!-- email signup -->
-        Join our mailing list! Sign Up
+        <h4>Join our mailing list!</h4>
         <!-- nav -->
         <nav>
           <input type="email" placeholder="Email Address" />
@@ -149,7 +149,7 @@
           </div>
         </nav>
         <!-- copyright -->
-        ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+        <p>©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
       </footer>
     </div>
   </body>
