--- a/menu.html
+++ b/menu.html
@@ -22,10 +22,23 @@
     <div>
       <!-- header -->
       <header>
-        BLOOMTECH BAR AND GRILL
+        <div>
+          <h1><a href="index.html">BLOOMTECH BAR AND GRILL</a></h1>
 
-        <!-- nav -->
-        Menu Reservations Special Offers Contact
+          <!-- nav -->
+          <nav>
+            <div>
+              <a href="menu.html">Menu</a>
+              <a href="#reservations">Reservations</a>
+              <a href="#offers">Special Offers</a>
+              <a href="#contact">Contact</a>
+            </div>
+
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+          </nav>
+        </div>
       </header>
 
       <!-- spacer -->
@@ -33,22 +46,110 @@
 
       <!-- menu -->
       <article class="menu">
-        Food & Drink Drinks Soda $2 Coke products Coffee $2 Cream and sugar
-        available upon request Beer $5 Delicious and refreshing Wine $5 Light
-        and fruity Cocktail $10 Ask about our specials Appetizers Fried Pickles
-        $6 Golden and crispy with tang! (V) Buffalo Wings $10 5 wings per order;
-        mild, medium, or hot sauce and served with bleu cheese/ranch and carrot
-        sticks (GF) Poutine $5 Homemade fries topped with everything but the
-        kitchen sink Soup and Salad House Salad $8 Spinach and arugala with all
-        the good veggies; add chicken for $6 (GF, V) French Onion Soup $4 Served
-        with a thick topping of cheese and delicious bread Cheddar Broccoli Soup
-        $5 Creamy and filling (GF) Entrees Ribeye Steak $32 Served with mashed
-        potatoes and roasted asparagus Big Boy Burger $14 Beef or black bean
-        burger on homemade bun served with fries Black Bean Burger: (V) Pork
-        Shortrib $18 Melt off the bone finger food (GF) Desserts Flourless
-        Chocolate Cake $7 Gooey and chocolatey heaven (GF) Cookies and Ice Cream
-        $6 Choose 2 cookies and 1 scoop of ice cream from an assortment Creme
-        Brulee $8 Crispy scorched top containing a perfect, smooth custard (GF)
+        <div class="menu-container">
+          <h2>Food & Drink</h2>
+          <div class="menu-section">
+            Drinks
+            <div class="menu-item">Soda $2 Coke products</div>
+            <div class="menu-item">
+              Coffee $2 Cream and sugar available upon request
+            </div>
+            <div class="menu-item">Beer $5 Delicious and refreshing</div>
+            <div class="menu-item">Wine $5</div>
+            <div class="menu-item">
+              Light and fruity Cocktail $10 Ask about our specials
+            </div>
+          </div>
+          <div class="menu-section">
+            Appetizers
+            <div class="menu-item">
+              <h4>Fried Pickles</h4>
+              <h4>$6</h4>
+              <p>Golden and crispy with tang!</p>
+              <p>(V)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Buffalo Wings</h4>
+              <h4>$10</h4>
+              <p>
+                5 wings per order; mild, medium, or hot sauce and served with
+                bleu cheese ranch and carrot sticks
+              </p>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Poutine</h4>
+              <h4>$5</h4>
+              <p>Homemade fries topped with everything but the kitchen sink</p>
+            </div>
+          </div>
+          <div class="menu-section">
+            Soup and Salad
+            <div class="menu-item">
+              <h4>House Salad</h4>
+              <h4>$8</h4>
+              <p>
+                Spinach and arugala with all the good veggies; add chicken for
+                $6
+              </p>
+              <p>(GF, V)</p>
+            </div>
+            <div class="menu-item">
+              <h4>French Onion Soup</h4>
+              <h4>$4</h4>
+              <p>Served with a thick topping of cheese and delicious bread</p>
+            </div>
+            <div class="menu-item">
+              <h4>Cheddar Broccoli Soup</h4>
+              <h4>$5</h4>
+              <p>Creamy and filling</p>
+              <p>(GF)</p>
+            </div>
+          </div>
+          <div class="menu-section">
+            Entrees
+            <div class="menu-item">
+              <h4>Ribeye Steak</h4>
+              <h4>$32</h4>
+              <p>Served with mashed potatoes and roasted asparagus</p>
+            </div>
+            <div class="menu-item">
+              <h4>Boy Burger</h4>
+              <h4>$14</h4>
+              <p>
+                Beef or black bean burger on homemade bun served with fries
+                Black Bean Burger:
+              </p>
+              <p>(V)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Pork Shortrib</h4>
+              <h4>$18</h4>
+              <p>Melt off the bone finger food</p>
+              <p>(GF)</p>
+            </div>
+          </div>
+          <div class="menu-section">
+            Desserts
+            <div class="menu-item">
+              <h4>Flourless Chocolate Cake</h4>
+              <h4>$7</h4>
+              <p>Gooey and chocolatey heaven</p>
+              <p>(GF)</p>
+              <div class="menu-item">
+                <h4>Cookies and Ice Cream</h4>
+                <h4>$6</h4>
+                <p>
+                  Choose 2 cookies and 1 scoop of ice cream from an assortment
+                </p>
+              </div>
+            </div>
+            <div class="menu-item">
+              Creme Brulee $8 Crispy scorched top containing a perfect, smooth
+              custard (GF)
+            </div>
+          </div>
+        </div>
       </article>
 
       <!-- spacer -->
@@ -57,11 +158,20 @@
       <!-- footer -->
       <footer>
         <!-- email signup -->
-        Join our mailing list! Sign Up
+        <h4>Join our mailing list!</h4>
         <!-- nav -->
-        Menu Reservations Special Offers Contact
+        <nav>
+          <input type="email" placeholder="Email Address" />
+          <button class="email-btn" type="button">Sign Up</button>
+          <div>
+            <a href="menu.html">Menu</a>
+            <a href="#reservations">Reservations</a>
+            <a href="#offers">Special Offers</a>
+            <a href="#contact">Contact</a>
+          </div>
+        </nav>
         <!-- copyright -->
-        ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+        <p>©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
       </footer>
     </div>
   </body>
