added h4 tags to menu title and prices

--- a/menu.html
+++ b/menu.html
@@ -49,19 +49,35 @@
         <div class="menu-container">
           <h2>Food & Drink</h2>
           <div class="menu-section">
-            Drinks
-            <div class="menu-item">Soda $2 Coke products</div>
+            <h4>Drinks</h4>
             <div class="menu-item">
-              Coffee $2 Cream and sugar available upon request
+              <h4>Soda</h4>
+              <h4>$2</h4>
+              <p>Coke products</p>
             </div>
-            <div class="menu-item">Beer $5 Delicious and refreshing</div>
-            <div class="menu-item">Wine $5</div>
             <div class="menu-item">
-              Light and fruity Cocktail $10 Ask about our specials
+              <h4>Coffee</h4>
+              <h4>$2</h4>
+              <p>Cream and sugar available upon request</p>
+            </div>
+            <div class="menu-item">
+              <h4>Beer</h4>
+              <h4>$5</h4>
+              <p>Delicious and refreshing</p>
+            </div>
+            <div class="menu-item">
+              <h4>Wine</h4>
+              <h4>$5</h4>
+              <p>Light and fruity</p>
+            </div>
+            <div class="menu-item">
+              <h4>Cocktail</h4>
+              <h4>$10</h4>
+              <p>Ask about our specials</p>
             </div>
           </div>
           <div class="menu-section">
-            Appetizers
+            <h4>Appetizers</h4>
             <div class="menu-item">
               <h4>Fried Pickles</h4>
               <h4>$6</h4>
@@ -84,7 +100,7 @@
             </div>
           </div>
           <div class="menu-section">
-            Soup and Salad
+            <h4>Soup and Salad</h4>
             <div class="menu-item">
               <h4>House Salad</h4>
               <h4>$8</h4>
@@ -107,7 +123,7 @@
             </div>
           </div>
           <div class="menu-section">
-            Entrees
+            <h4>Entrees</h4>
             <div class="menu-item">
               <h4>Ribeye Steak</h4>
               <h4>$32</h4>
@@ -130,23 +146,25 @@
             </div>
           </div>
           <div class="menu-section">
-            Desserts
+            <h4>Desserts</h4>
             <div class="menu-item">
               <h4>Flourless Chocolate Cake</h4>
               <h4>$7</h4>
               <p>Gooey and chocolatey heaven</p>
               <p>(GF)</p>
-              <div class="menu-item">
-                <h4>Cookies and Ice Cream</h4>
-                <h4>$6</h4>
-                <p>
-                  Choose 2 cookies and 1 scoop of ice cream from an assortment
-                </p>
-              </div>
             </div>
             <div class="menu-item">
-              Creme Brulee $8 Crispy scorched top containing a perfect, smooth
-              custard (GF)
+              <h4>Cookies and Ice Cream</h4>
+              <h4>$6</h4>
+              <p>
+                Choose 2 cookies and 1 scoop of ice cream from an assortment
+              </p>
+            </div>
+            <div class="menu-item">
+              <h4>Creme Brulee</h4>
+              <h4>$8</h4>
+              <p>Crispy scorched top containing a perfect, smooth custard</p>
+              <p>(GF)</p>
             </div>
           </div>
         </div>
